--- a/app/bower.json
+++ b/app/bower.json
@@ -11,6 +11,7 @@
     "angular-loader": "~1.4.0",
     "angular-mocks": "~1.4.0",
     "angular-bootstrap": "^0.13.0",
+    "angular-uuid":"",
     "html5-boilerplate": "~5.2.0",
     "jquery": "~2.1.1",
     "bootstrap": "~3.2.0"
